--- a/notebooks/mowl-introduction.ipynb
+++ b/notebooks/mowl-introduction.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cbed48fd",
-   "metadata": {},
+   "id": "89f13d72",
+   "metadata": {
+    "cell_marker": "\"\"\""
+   },
    "source": [
     "# mOWL: Python library for machine learning with ontologies\n",
     "\n",
@@ -22,8 +24,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4c1228b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "225ca239",
+   "id": "98e09922",
    "metadata": {
     "cell_marker": "\"\"\"",
     "lines_to_next_cell": 0
@@ -31,19 +41,21 @@
    "source": [
     "## Ontology Management\n",
     "\n",
-    "This includes ontology  normalization and reasoning. To achieve this, we interface with the OWL API.\n",
+    "This includes ontology normalization and reasoning. To achieve this,\n",
+    "we interface with the OWL API.\n",
     "\n",
     "<img src=\"figs/mowl_intro/reasoning.jpg\" width=\"400\" alt=\"Ontology reasoning.\" title=\"Ontology reasoning.\"/>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2a3fc95",
+   "id": "f13121ea",
    "metadata": {
     "cell_marker": "\"\"\"",
     "lines_to_next_cell": 0
    },
    "source": [
+    "\n",
     "## Ontology Transformation\n",
     "This includes methods for extracting ontology information into graphs, text corpora or process the axioms directly.\n",
     "\n",
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb8b824",
+   "id": "43494752",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a26a134e",
+   "id": "7ee712ce",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a5128a6",
+   "id": "084bc997",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -91,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2036f0ac",
+   "id": "03eca31e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,18 +112,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4f9815",
+   "id": "db87c92d",
    "metadata": {
     "cell_marker": "\"\"\""
    },
    "source": [
-    "mOWL interfaces the OWL API. For this, we need to interface with the Java Virtual Macine (JVM):"
+    "mOWL interfaces the OWL API. For this, we need to interface with the Java Virtual Machine (JVM):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2be30d45",
+   "execution_count": null,
+   "id": "178733e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +134,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b432421",
-   "metadata": {},
+   "id": "76aba016",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
