--- a/notebooks/graph-based-embeddings.ipynb
+++ b/notebooks/graph-based-embeddings.ipynb
@@ -102,16 +102,26 @@
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'http://Father'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyvis_network\n\u001b[0;32m----> 3\u001b[0m net \u001b[38;5;241m=\u001b[39m \u001b[43mpyvis_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43medges\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m net\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgraph.html\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Git/mowl-tutorial/notebooks/utils.py:15\u001b[0m, in \u001b[0;36mpyvis_network\u001b[0;34m(edges)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dst \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m nodes:\n\u001b[1;32m     14\u001b[0m     nodes[dst] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(nodes)\n\u001b[0;32m---> 15\u001b[0m net\u001b[38;5;241m.\u001b[39madd_node(\u001b[43mnodes\u001b[49m\u001b[43m[\u001b[49m\u001b[43medge\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msrc\u001b[49m\u001b[43m]\u001b[49m, label\u001b[38;5;241m=\u001b[39msrc)\n\u001b[1;32m     16\u001b[0m net\u001b[38;5;241m.\u001b[39madd_node(nodes[edge\u001b[38;5;241m.\u001b[39mdst], label\u001b[38;5;241m=\u001b[39mdst)\n\u001b[1;32m     17\u001b[0m net\u001b[38;5;241m.\u001b[39madd_edge(nodes[edge\u001b[38;5;241m.\u001b[39msrc], nodes[edge\u001b[38;5;241m.\u001b[39mdst])\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'http://Father'"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"graph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4404822400>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,12 +134,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "af420f93",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jane\thasChild\tMelissa\n",
+      "Parent\thasChild\tPerson\n",
+      "John\thasChild\tMelissa\n",
+      "Female\tsubclassof\tPerson\n",
+      "Person\tsuperclassof\tFemale\n",
+      "Father\tsubclassof\tMale\n",
+      "Male\tsuperclassof\tFather\n",
+      "Jane\thasChild\tRobert\n",
+      "Male\tsubclassof\tPerson\n",
+      "Person\tsuperclassof\tMale\n",
+      "Parent\tsubclassof\tPerson\n",
+      "Person\tsuperclassof\tParent\n",
+      "Mother\tsubclassof\tFemale\n",
+      "Female\tsuperclassof\tMother\n",
+      "John\thasChild\tRobert\n"
+     ]
+    }
+   ],
    "source": [
     "dl2vec_proj = DL2VecProjector(bidirectional_taxonomy=True)\n",
     "d2v_edges = dl2vec_proj.project(dataset.ontology, True)\n",
@@ -143,12 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "372d5d39",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"d2vgraph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f428b09be80>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "d2v_net = pyvis_network(d2v_edges)\n",
@@ -158,25 +220,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "15e2216a",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subRoles: Map()\n",
+      "inverseRoles: Map()\n"
+     ]
+    }
+   ],
    "source": [
     "owl2vec_proj = OWL2VecStarProjector(bidirectional_taxonomy=True)\n",
-    "o2v_edges = owl2vec_proj.project(dataset.ontology, True)"
+    "o2v_edges = owl2vec_proj.project(dataset.ontology)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c3b12c73",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"o2vgraph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4289d7fbe0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "o2v_net = pyvis_network(o2v_edges)\n",
@@ -204,9 +305,9 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "mowl-tutorial",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mowl-tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -218,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
