--- a/notebooks/Ontologies_and_text_mining.ipynb
+++ b/notebooks/Ontologies_and_text_mining.ipynb
@@ -286,7 +286,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can see how 'mother' and 'female' are close to 'parent'. We can learn exact parameters to gague similarity. "
+        "We can see how 'mother' and 'female' are close to 'parent'. We can learn exact parameters to gague similarity.
+Moreover, we can check the cosine distance between "tumor" and "tumour" "
       ],
       "metadata": {
         "id": "snKsjB_goiqu"
