Ontologies and text

--- a/notebooks/Ontologies_and_text.ipynb
+++ b/notebooks/Ontologies_and_text.ipynb
@@ -8,7 +8,7 @@
         "id": "3bc3b40e"
       },
       "source": [
-        "# Ontologies and text mining\n",
+        "# Ontologies and text\n",
         "\n",
         "> Overview:\n",
         "\n",
