--- a/notebooks/graph-based-embeddings.ipynb
+++ b/notebooks/graph-based-embeddings.ipynb
@@ -116,7 +116,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4404822400>"
+       "<IPython.lib.display.IFrame at 0x7fec6c6fe1c0>"
       ]
      },
      "execution_count": 3,
