--- a/notebooks/graph-based-embeddings.ipynb
+++ b/notebooks/graph-based-embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38671993",
+   "id": "82095c53",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9901d840",
+   "id": "a4507601",
    "metadata": {
     "cell_marker": "r\"\"\",\n\"\"\""
    },
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0b3b7209",
+   "execution_count": null,
+   "id": "fb1e33d7",
    "metadata": {
     "title": "[code]"
    },
@@ -53,30 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "08d009a9",
+   "execution_count": null,
+   "id": "f0e387d8",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: Number of ontology classes: 6\n",
-      "Father\tsubclassof\tMale\n",
-      "Female\tsubclassof\tPerson\n",
-      "Male\tsubclassof\tPerson\n",
-      "Mother\tsubclassof\tFemale\n",
-      "Parent\tsubclassof\tPerson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from mowl.datasets.builtin import FamilyDataset\n",
     "from mowl.datasets import PathDataset\n",
     "#dataset = FamilyDataset()\n",
-    "dataset = PathDataset(\"family.owl\")\n",
+    "dataset = PathDataset(\"data/family.owl\")\n",
     "edges = TaxonomyProjector().project(dataset.ontology)\n",
     "\n",
     "for edge in edges:\n",
@@ -88,80 +75,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8a50e9a5",
+   "execution_count": null,
+   "id": "a4e4797a",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"graph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fec6c6fe1c0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "from utils import pyvis_network\n",
+    "from scripts.utils import pyvis_network\n",
     "\n",
     "net = pyvis_network(edges)\n",
-    "net.show(\"graph.html\")"
+    "net.show(\"figs/graph.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "af420f93",
+   "execution_count": null,
+   "id": "d319985d",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jane\thasChild\tMelissa\n",
-      "Parent\thasChild\tPerson\n",
-      "John\thasChild\tMelissa\n",
-      "Female\tsubclassof\tPerson\n",
-      "Person\tsuperclassof\tFemale\n",
-      "Father\tsubclassof\tMale\n",
-      "Male\tsuperclassof\tFather\n",
-      "Jane\thasChild\tRobert\n",
-      "Male\tsubclassof\tPerson\n",
-      "Person\tsuperclassof\tMale\n",
-      "Parent\tsubclassof\tPerson\n",
-      "Person\tsuperclassof\tParent\n",
-      "Mother\tsubclassof\tFemale\n",
-      "Female\tsuperclassof\tMother\n",
-      "John\thasChild\tRobert\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dl2vec_proj = DL2VecProjector(bidirectional_taxonomy=True)\n",
     "d2v_edges = dl2vec_proj.project(dataset.ontology, True)\n",
@@ -175,66 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "372d5d39",
+   "execution_count": null,
+   "id": "476ad48e",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"d2vgraph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f428b09be80>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "d2v_net = pyvis_network(d2v_edges)\n",
-    "d2v_net.show(\"d2vgraph.html\")\n",
+    "d2v_net.show(\"figs/d2vgraph.html\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "15e2216a",
+   "execution_count": null,
+   "id": "d625f9e7",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "subRoles: Map()\n",
-      "inverseRoles: Map()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "owl2vec_proj = OWL2VecStarProjector(bidirectional_taxonomy=True)\n",
     "o2v_edges = owl2vec_proj.project(dataset.ontology)"
@@ -242,58 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c3b12c73",
+   "execution_count": null,
+   "id": "61acc9d2",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"o2vgraph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4289d7fbe0>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "o2v_net = pyvis_network(o2v_edges)\n",
-    "o2v_net.show(\"o2vgraph.html\")\n",
+    "o2v_net.show(\"figs/o2vgraph.html\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c91c23f4",
+   "id": "52ab37c6",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
+    "\n",
     "\n"
    ]
   }
@@ -303,23 +170,6 @@
    "cell_metadata_filter": "title,-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   }
  },
  "nbformat": 4,
