update slides and notebooks

--- a/notebooks/graph-based-embeddings.ipynb
+++ b/notebooks/graph-based-embeddings.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb1e33d7",
    "metadata": {
     "title": "[code]"
@@ -53,12 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f0e387d8",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Number of ontology classes: 6\n",
+      "Father\tsubclassof\tMale\n",
+      "Female\tsubclassof\tPerson\n",
+      "Male\tsubclassof\tPerson\n",
+      "Mother\tsubclassof\tFemale\n",
+      "Parent\tsubclassof\tPerson\n"
+     ]
+    }
+   ],
    "source": [
     "#from mowl.datasets.builtin import FamilyDataset\n",
     "from mowl.datasets import PathDataset\n",
@@ -75,12 +88,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a4e4797a",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"figs/graph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f5590838b20>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "from scripts.utils import pyvis_network\n",
@@ -91,12 +134,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d319985d",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jane\thasChild\tMelissa\n",
+      "Parent\thasChild\tPerson\n",
+      "John\thasChild\tMelissa\n",
+      "Female\tsubclassof\tPerson\n",
+      "Person\tsuperclassof\tFemale\n",
+      "Father\tsubclassof\tMale\n",
+      "Male\tsuperclassof\tFather\n",
+      "Jane\thasChild\tRobert\n",
+      "Male\tsubclassof\tPerson\n",
+      "Person\tsuperclassof\tMale\n",
+      "Parent\tsubclassof\tPerson\n",
+      "Person\tsuperclassof\tParent\n",
+      "Mother\tsubclassof\tFemale\n",
+      "Female\tsuperclassof\tMother\n",
+      "John\thasChild\tRobert\n"
+     ]
+    }
+   ],
    "source": [
     "dl2vec_proj = DL2VecProjector(bidirectional_taxonomy=True)\n",
     "d2v_edges = dl2vec_proj.project(dataset.ontology, True)\n",
@@ -110,12 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "476ad48e",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"figs/d2vgraph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f570809e610>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "d2v_net = pyvis_network(d2v_edges)\n",
@@ -125,12 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d625f9e7",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subRoles: Map()\n",
+      "inverseRoles: Map()\n"
+     ]
+    }
+   ],
    "source": [
     "owl2vec_proj = OWL2VecStarProjector(bidirectional_taxonomy=True)\n",
     "o2v_edges = owl2vec_proj.project(dataset.ontology)"
@@ -138,12 +242,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "61acc9d2",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"600px\"\n",
+       "            src=\"figs/o2vgraph.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f570a110880>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "o2v_net = pyvis_network(o2v_edges)\n",
@@ -170,6 +304,23 @@
    "cell_metadata_filter": "title,-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
