--- a/notebooks/graph-based-embeddings.ipynb
+++ b/notebooks/graph-based-embeddings.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6004fc92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mowl-borg\n",
+    "!pip install pyvis"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "82095c53",
+   "id": "88e7fe74",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -12,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4507601",
+   "id": "8ff234be",
    "metadata": {
     "cell_marker": "r\"\"\",\n\"\"\""
    },
@@ -37,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fb1e33d7",
+   "execution_count": 7,
+   "id": "b32fc704",
    "metadata": {
     "title": "[code]"
    },
@@ -53,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f0e387d8",
+   "execution_count": 8,
+   "id": "be11ee64",
    "metadata": {
     "title": "[code]"
    },
@@ -88,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a4e4797a",
+   "execution_count": 9,
+   "id": "4532648e",
    "metadata": {
     "title": "[code]"
    },
@@ -116,10 +127,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5590838b20>"
+       "<IPython.lib.display.IFrame at 0x7f8c2048b3a0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d319985d",
+   "execution_count": 14,
+   "id": "5939db6d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -144,27 +155,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jane\thasChild\tMelissa\n",
       "Parent\thasChild\tPerson\n",
-      "John\thasChild\tMelissa\n",
       "Female\tsubclassof\tPerson\n",
       "Person\tsuperclassof\tFemale\n",
       "Father\tsubclassof\tMale\n",
       "Male\tsuperclassof\tFather\n",
-      "Jane\thasChild\tRobert\n",
       "Male\tsubclassof\tPerson\n",
       "Person\tsuperclassof\tMale\n",
       "Parent\tsubclassof\tPerson\n",
       "Person\tsuperclassof\tParent\n",
       "Mother\tsubclassof\tFemale\n",
-      "Female\tsuperclassof\tMother\n",
-      "John\thasChild\tRobert\n"
+      "Female\tsuperclassof\tMother\n"
      ]
     }
    ],
    "source": [
     "dl2vec_proj = DL2VecProjector(bidirectional_taxonomy=True)\n",
-    "d2v_edges = dl2vec_proj.project(dataset.ontology, True)\n",
+    "d2v_edges = dl2vec_proj.project(dataset.ontology, with_individuals=False)\n",
     "\n",
     "for edge in d2v_edges:\n",
     "    src = edge.src.split(\"/\")[-1]\n",
@@ -175,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "476ad48e",
+   "execution_count": 15,
+   "id": "855898e6",
    "metadata": {
     "title": "[code]"
    },
@@ -203,10 +210,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f570809e610>"
+       "<IPython.lib.display.IFrame at 0x7f8a80096f40>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,21 +227,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d625f9e7",
+   "execution_count": null,
+   "id": "c0575bc4",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "subRoles: Map()\n",
-      "inverseRoles: Map()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "owl2vec_proj = OWL2VecStarProjector(bidirectional_taxonomy=True)\n",
     "o2v_edges = owl2vec_proj.project(dataset.ontology)"
@@ -242,42 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "61acc9d2",
+   "execution_count": null,
+   "id": "998bf3c9",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"figs/o2vgraph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f570a110880>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "o2v_net = pyvis_network(o2v_edges)\n",
@@ -288,12 +256,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ab37c6",
+   "id": "5ac0347d",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
+    "\n",
     "\n",
     "\n"
    ]
