--- a/notebooks/mowl-introduction.ipynb
+++ b/notebooks/mowl-introduction.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de0a02d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mowl-borg"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "89f13d72",
+   "id": "482d2fd4",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -26,14 +36,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c1228b",
+   "id": "4885ecd0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "98e09922",
+   "id": "ce5dfcae",
    "metadata": {
     "cell_marker": "\"\"\"",
     "lines_to_next_cell": 0
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13121ea",
+   "id": "d9be5d1e",
    "metadata": {
     "cell_marker": "\"\"\"",
     "lines_to_next_cell": 0
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43494752",
+   "id": "f4a426e1",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee712ce",
+   "id": "eb08499b",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -90,9 +100,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "084bc997",
+   "id": "4aa1908b",
    "metadata": {
-    "cell_marker": "\"\"\""
+    "cell_marker": "\"\"\"",
+    "lines_to_next_cell": 2
    },
    "source": [
     "# Getting started\n",
@@ -101,18 +112,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03eca31e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install mowl-borg"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "db87c92d",
+   "id": "17029d64",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -122,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "178733e7",
+   "execution_count": 1,
+   "id": "215e407c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "76aba016",
+   "execution_count": null,
+   "id": "bc88dde2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bea9453",
+   "id": "cf8e2f91",
    "metadata": {},
    "source": [
     "# Let's create our first ontology"
@@ -156,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "21701ad6",
+   "execution_count": null,
+   "id": "be99bb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e47d216",
+   "id": "bdd976a2",
    "metadata": {},
    "source": [
     "## Concept names"
@@ -175,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5d1a8f77",
+   "execution_count": null,
+   "id": "4e3931e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1ea298",
+   "id": "25a0b80c",
    "metadata": {},
    "source": [
     "## Role names"
@@ -204,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25cf936e",
+   "id": "df41ba0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e481bb64",
+   "id": "f6e9c6bc",
    "metadata": {},
    "source": [
     "## Individual names"
@@ -222,8 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fcf84ba9",
+   "execution_count": null,
+   "id": "69e2cef3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,46 +236,124 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a23e88",
-   "metadata": {},
+   "id": "115ad774",
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "source": [
-    "## Axioms"
+    "## Axioms\n",
+    "\n",
+    "Let's create some axioms of the form $A \\sqsubseteq B$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b2c0c186",
+   "execution_count": null,
+   "id": "c191268f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<java object 'org.semanticweb.owlapi.model.parameters.ChangeApplied'>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "axioms = HashSet()\n",
     "axioms.add(adapter.create_subclass_of(male, person))\n",
     "axioms.add(adapter.create_subclass_of(female, person))\n",
     "axioms.add(adapter.create_subclass_of(parent, person))\n",
     "axioms.add(adapter.create_subclass_of(mother, female))\n",
-    "axioms.add(adapter.create_subclass_of(father, male))\n",
+    "axioms.add(adapter.create_subclass_of(father, male))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e935ce9c",
+   "metadata": {},
+   "source": [
+    "Now, let's create some axioms of the form $A \\sqcap B \\sqsubseteq C$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f00bad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "parent_and_male = adapter.create_object_intersection_of(parent, male)\n",
     "axioms.add(adapter.create_subclass_of(parent_and_male, father))\n",
     "parent_and_female = adapter.create_object_intersection_of(parent, female)\n",
-    "axioms.add(adapter.create_subclass_of(parent_and_female, mother))\n",
+    "axioms.add(adapter.create_subclass_of(parent_and_female, mother))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43bfed22",
+   "metadata": {},
+   "source": [
+    "Now some axioms of the form $A \\sqcup B \\equiv C$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45c8f01c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "male_or_female = adapter.create_object_union_of(male, female)\n",
-    "axioms.add(adapter.create_equivalent_classes(male_or_female, person))\n",
+    "axioms.add(adapter.create_equivalent_classes(male_or_female, person))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "754ce4cf",
+   "metadata": {},
+   "source": [
+    "One axiom of the form $\\neg A \\equiv  B$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeaeb512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "not_male = adapter.create_complement_of(male)\n",
-    "axioms.add(adapter.create_equivalent_classes(not_male, female))\n",
+    "axioms.add(adapter.create_equivalent_classes(not_male, female))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3279b5c",
+   "metadata": {},
+   "source": [
+    "One axiom of the form $A \\sqsubseteq \\exists R.B$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a008d8a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "has_child_person = adapter.create_object_some_values_from(has_child, person)\n",
-    "axioms.add(adapter.create_subclass_of(parent, has_child_person))\n",
+    "axioms.add(adapter.create_subclass_of(parent, has_child_person))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a21cd1b",
+   "metadata": {},
+   "source": [
+    "And finally, some assertion axioms of the form $C(a)$ and $R(a,b)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dadd6ef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "axioms.add(adapter.create_class_assertion(father, John))\n",
     "axioms.add(adapter.create_class_assertion(mother, Jane))\n",
     "axioms.add(adapter.create_class_assertion(male, Robert))\n",
@@ -288,8 +367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b2ec2fdf",
+   "execution_count": null,
+   "id": "818b4a99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,8 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "33a26c0a",
+   "execution_count": null,
+   "id": "68846e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,8 +388,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3afc17b3",
-   "metadata": {},
+   "id": "9ab31180",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
