--- a/notebooks/syntactic-embeddings.ipynb
+++ b/notebooks/syntactic-embeddings.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "021d811d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mowl-borg"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "cae946fb",
+   "id": "4fc0966f",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -12,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a48d543",
+   "id": "f4cc192f",
    "metadata": {
     "cell_marker": "r\"\"\",\n\"\"\""
    },
@@ -23,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0806359e",
+   "id": "d62091ab",
    "metadata": {
     "title": "[code]"
    },
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b021776",
+   "id": "61e763e1",
    "metadata": {
     "cell_marker": "\"\"\"",
     "lines_to_next_cell": 0
@@ -47,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f27881c",
+   "id": "4962f6bf",
    "metadata": {
     "title": "[code]"
    },
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "363b7c25",
+   "id": "7fe542cb",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -73,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f3e4ec",
+   "id": "99c534b8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58252949",
+   "id": "9f60c9d3",
    "metadata": {
     "cell_marker": "\"\"\"",
     "lines_to_next_cell": 2
@@ -97,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e912f73",
+   "id": "f3b807e0",
    "metadata": {
     "lines_to_next_cell": 0,
     "title": "[code]"
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0862480c",
+   "id": "2c76928c",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -123,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3be21483",
+   "id": "b6fd98fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c478ae82",
+   "id": "585a2175",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d8e01a",
+   "id": "a35ea93b",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1999ff27",
+   "id": "dd0398be",
    "metadata": {},
    "source": [
     "We can generate more axioms by performing reasoning over the current ontology. mOWL provides access to ELK and Hermit reasoners. Those reasoners can be accessed using the OWLAPI directly or using the `MOWLReasoner` wrapper class that provides some shortcuts to reasoner methods."
@@ -169,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6dab255",
+   "id": "dca354fd",
    "metadata": {
     "title": "[code]"
    },
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdddab80",
+   "id": "6a517e3f",
    "metadata": {},
    "source": [
     "Once the axioms were generated, it is time to add them to the ontology:"
@@ -200,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ce8c92",
+   "id": "13f15c0f",
    "metadata": {
     "title": "[code]"
    },
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8ec0ffc",
+   "id": "231a200c",
    "metadata": {},
    "source": [
     "Then we can do the embedding process with the updated ontology:"
@@ -229,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c04337f",
+   "id": "b379f927",
    "metadata": {
     "title": "[code]"
    },
@@ -242,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834ee1b6",
+   "id": "703bf744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a80e2b33",
+   "id": "eff503d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,9 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d3f6e05",
+   "id": "8af8620d",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 3
    },
    "outputs": [],
    "source": []
@@ -285,23 +295,6 @@
    "cell_metadata_filter": "title,-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   }
  },
  "nbformat": 4,
