--- a/notebooks/graph-based-embeddings.ipynb
+++ b/notebooks/graph-based-embeddings.ipynb
@@ -3,17 +3,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6004fc92",
+   "id": "b729f77c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mowl-borg\n",
-    "!pip install pyvis"
+    "!pip install mowl-borg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fb8344b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "import os\n",
+    "os.chdir(\"/content/drive/MyDrive/mowl-tutorial/notebooks\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88e7fe74",
+   "id": "244afd59",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -23,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff234be",
+   "id": "e1374bba",
    "metadata": {
     "cell_marker": "r\"\"\",\n\"\"\""
    },
@@ -48,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b32fc704",
+   "execution_count": null,
+   "id": "bf09548c",
    "metadata": {
     "title": "[code]"
    },
@@ -64,25 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "be11ee64",
+   "execution_count": null,
+   "id": "338a26ca",
    "metadata": {
+    "lines_to_next_cell": 1,
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: Number of ontology classes: 6\n",
-      "Father\tsubclassof\tMale\n",
-      "Female\tsubclassof\tPerson\n",
-      "Male\tsubclassof\tPerson\n",
-      "Mother\tsubclassof\tFemale\n",
-      "Parent\tsubclassof\tPerson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from mowl.datasets.builtin import FamilyDataset\n",
     "from mowl.datasets import PathDataset\n",
@@ -99,79 +99,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4532648e",
+   "execution_count": null,
+   "id": "706798c7",
    "metadata": {
+    "lines_to_next_cell": 1,
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"figs/graph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8c2048b3a0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "from scripts.utils import pyvis_network\n",
-    "\n",
-    "net = pyvis_network(edges)\n",
-    "net.show(\"figs/graph.html\")"
+    "def nx_network(edges):\n",
+    "    import networkx as nx\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    G = nx.DiGraph()\n",
+    "    for edge in edges:\n",
+    "        src = edge.src.split(\"/\")[-1]\n",
+    "        dst = edge.dst.split(\"/\")[-1]\n",
+    "        G.add_edge(src, dst)\n",
+    "    #nx draw with custom colors\n",
+    "    plt.figure(figsize=(5,5))\n",
+    "    pos = nx.spring_layout(G)\n",
+    "    nx.draw(G, pos, edge_color='black', width=1, linewidths=1,\n",
+    "            node_size=500, node_color='cyan', alpha=0.9,\n",
+    "            labels={node:node for node in G.nodes()})\n",
+    "    #nx.draw(G, with_labels=True)\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5939db6d",
+   "execution_count": null,
+   "id": "42ea504f",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parent\thasChild\tPerson\n",
-      "Female\tsubclassof\tPerson\n",
-      "Person\tsuperclassof\tFemale\n",
-      "Father\tsubclassof\tMale\n",
-      "Male\tsuperclassof\tFather\n",
-      "Male\tsubclassof\tPerson\n",
-      "Person\tsuperclassof\tMale\n",
-      "Parent\tsubclassof\tPerson\n",
-      "Person\tsuperclassof\tParent\n",
-      "Mother\tsubclassof\tFemale\n",
-      "Female\tsuperclassof\tMother\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "nx_network(edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905bc83c",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
    "source": [
     "dl2vec_proj = DL2VecProjector(bidirectional_taxonomy=True)\n",
-    "d2v_edges = dl2vec_proj.project(dataset.ontology, with_individuals=False)\n",
+    "d2v_edges = dl2vec_proj.project(dataset.ontology, with_individuals=True)\n",
     "\n",
     "for edge in d2v_edges:\n",
     "    src = edge.src.split(\"/\")[-1]\n",
@@ -182,53 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "855898e6",
+   "execution_count": null,
+   "id": "03107ed2",
    "metadata": {
     "title": "[code]"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Local cdn resources have problems on chrome/safari when used in jupyter-notebook. \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600px\"\n",
-       "            src=\"figs/d2vgraph.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8a80096f40>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "d2v_net = pyvis_network(d2v_edges)\n",
-    "d2v_net.show(\"figs/d2vgraph.html\")\n",
+    "nx_network(d2v_edges)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0575bc4",
+   "id": "ef41271b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -241,27 +185,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "998bf3c9",
+   "id": "d9aca92d",
    "metadata": {
+    "lines_to_next_cell": 2,
     "title": "[code]"
    },
    "outputs": [],
    "source": [
-    "\n",
-    "o2v_net = pyvis_network(o2v_edges)\n",
-    "o2v_net.show(\"figs/o2vgraph.html\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ac0347d",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
+    "nx_network(o2v_edges)\n",
     "\n",
     "\n",
     "\n"
@@ -273,23 +204,6 @@
    "cell_metadata_filter": "title,-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   }
  },
  "nbformat": 4,
