--- a/notebooks/mowl-introduction.ipynb
+++ b/notebooks/mowl-introduction.ipynb
@@ -1,10 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6e7cb05c",
+   "metadata": {
+    "cell_marker": "\"\"\"",
+    "lines_to_next_cell": 0
+   },
+   "source": [
+    "# mOWL: Python library for machine learning with ontologies\n",
+    "\n",
+    "## Ontology creation:\n",
+    "To get started, you can install mOWL using pip:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de0a02d",
-   "metadata": {},
+   "id": "6a90be79",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "!pip install mowl-borg"
@@ -12,108 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "482d2fd4",
-   "metadata": {
-    "cell_marker": "\"\"\""
-   },
-   "source": [
-    "# mOWL: Python library for machine learning with ontologies\n",
-    "\n",
-    "Ontologies are being used across different machine learning models\n",
-    "since they can provide structured and axiomatic background knowldege regarding a particular domain of interest.\n",
-    "\n",
-    "\n",
-    "<img src=\"figs/mowl_intro/ont_repr2.jpg\" width=\"600\" alt=\"Ontology with axioms and annotations.\" title=\"Ontology with axioms and annotations.\"/>\n",
-    "\n",
-    "In mOWL, we have implemented a set of tools and functionalities to ease the integration of methods that use ontologies. The features that mOWL contains are:\n",
-    "\n",
-    "* Ontology Management\n",
-    "* Ontology Transformation\n",
-    "* Embedding Generation\n",
-    "* Embedding Post-processing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4885ecd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce5dfcae",
-   "metadata": {
-    "cell_marker": "\"\"\"",
-    "lines_to_next_cell": 0
-   },
-   "source": [
-    "## Ontology Management\n",
-    "\n",
-    "This includes ontology normalization and reasoning. To achieve this,\n",
-    "we interface with the OWL API.\n",
-    "\n",
-    "<img src=\"figs/mowl_intro/reasoning.jpg\" width=\"400\" alt=\"Ontology reasoning.\" title=\"Ontology reasoning.\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9be5d1e",
-   "metadata": {
-    "cell_marker": "\"\"\"",
-    "lines_to_next_cell": 0
-   },
-   "source": [
-    "\n",
-    "## Ontology Transformation\n",
-    "This includes methods for extracting ontology information into graphs, text corpora or process the axioms directly.\n",
-    "\n",
-    "<img src=\"figs/mowl_intro/transformation.jpg\" width=\"400\" alt=\"Ontology transformation.\" title=\"Ontology transformation.\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4a426e1",
-   "metadata": {
-    "cell_marker": "\"\"\""
-   },
-   "source": [
-    "## Embedding Generation\n",
-    "\n",
-    "Each ontology transformation result is usable to generate vector representations (embeddings) of entities. For graph projections we can use random walk methods (implemented in mOWL) or interface with the knowledge graph embedding library PyKEEN. Transformation into text allows to use natural language processing methods.\n",
-    "\n",
-    "<img src=\"figs/mowl_intro/embeddings.jpg\" width=\"600\" alt=\"Embeddings generation.\" title=\"Embeddings generation.\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eb08499b",
-   "metadata": {
-    "cell_marker": "\"\"\""
-   },
-   "source": [
-    "## Embedding post-processing\n",
-    "\n",
-    "This includes methods to use the embeddings previously generated. We can directly evaluate them using a set of metrics or use them to train a machine learning model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4aa1908b",
-   "metadata": {
-    "cell_marker": "\"\"\"",
-    "lines_to_next_cell": 2
-   },
-   "source": [
-    "# Getting started\n",
-    "\n",
-    "To get started, you can install mOWL using pip:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17029d64",
+   "id": "22c4de0b",
    "metadata": {
     "cell_marker": "\"\"\""
    },
@@ -123,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "215e407c",
+   "execution_count": null,
+   "id": "b325c450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc88dde2",
+   "id": "e4082c2e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -149,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf8e2f91",
+   "id": "7fc61d48",
    "metadata": {},
    "source": [
     "# Let's create our first ontology"
@@ -158,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be99bb86",
+   "id": "d629f60a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd976a2",
+   "id": "72d1d40c",
    "metadata": {},
    "source": [
     "## Concept names"
@@ -177,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3931e8",
+   "id": "08519efa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a0b80c",
+   "id": "ab385fab",
    "metadata": {},
    "source": [
     "## Role names"
@@ -205,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df41ba0e",
+   "id": "cd53fa85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6e9c6bc",
+   "id": "6e634782",
    "metadata": {},
    "source": [
     "## Individual names"
@@ -224,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69e2cef3",
+   "id": "e3a3301c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "115ad774",
+   "id": "6c5f2c6d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -249,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c191268f",
+   "id": "57424ec2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e935ce9c",
+   "id": "7f4ffcd7",
    "metadata": {},
    "source": [
     "Now, let's create some axioms of the form $A \\sqcap B \\sqsubseteq C$."
@@ -272,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f00bad2",
+   "id": "a97c664c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bfed22",
+   "id": "a5299f97",
    "metadata": {},
    "source": [
     "Now some axioms of the form $A \\sqcup B \\equiv C$."
@@ -293,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c8f01c",
+   "id": "26fcfd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754ce4cf",
+   "id": "4fd51b72",
    "metadata": {},
    "source": [
     "One axiom of the form $\\neg A \\equiv  B$."
@@ -312,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeaeb512",
+   "id": "cd222631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3279b5c",
+   "id": "d4fcf1c0",
    "metadata": {},
    "source": [
     "One axiom of the form $A \\sqsubseteq \\exists R.B$."
@@ -331,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a008d8a7",
+   "id": "0f4f94ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a21cd1b",
+   "id": "295aa720",
    "metadata": {},
    "source": [
     "And finally, some assertion axioms of the form $C(a)$ and $R(a,b)$."
@@ -350,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dadd6ef3",
+   "id": "80c176f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818b4a99",
+   "id": "3c7d54fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68846e59",
+   "id": "df8d13fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,9 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab31180",
+   "id": "793944a6",
    "metadata": {
-    "lines_to_next_cell": 2
+    "lines_to_next_cell": 3
    },
    "outputs": [],
    "source": []
@@ -401,23 +316,6 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0"
   }
  },
  "nbformat": 4,
